syntax = "proto3";

option go_package = "/";
import "google/protobuf/empty.proto";

enum UserGender {
    Male    = 0;
    Female  = 1;
}

message User {
    string id           = 1;
    string name         = 2;
    string password     = 3;
    UserGender gender   = 4;
}

message UserId {
    string id = 1;
}

message UserList {
    repeated User list = 1;
}

message Response{
    string responseCode = 1;
    string responseMsg  = 2;
}

service UserHandler {
    rpc AddUser(User) returns(Response) {}
    rpc GetUser(UserId) returns(User) {}
    rpc ListUser(google.protobuf.Empty) returns (UserList) {}
}